beholder-terraform/specs/traefik_base.yaml
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-to-https
  namespace: default
spec:
  redirectScheme:
    scheme: https
    permanent: true
