beholder-terraform/specs/traefik_dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  ports:
  - name: http
    targetPort: 9000
    port: 80
  selector:
    app.kubernetes.io/name: traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - match: Host(`${traefik_dashboard_hostname}`)
      kind: Rule
      services:
      - name: traefik-dashboard
        passHostHeader: true
        port: 80
