beholder-terraform/specs/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami-container
        image: containous/whoami
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: whoami
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-http-to-https-redirect
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`${whoami_hostname}`)
      kind: Rule
      middlewares:
      - name: http-to-https
      services:
      - name: whoami
        passHostHeader: true
        port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-route
spec:
  entryPoints:
    - websecure
  tls: {}
  routes:
    - match: Host(`${whoami_hostname}`)
      kind: Rule
      services:
      - name: whoami
        passHostHeader: true
        port: 80
